# OpenStratCore

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  TASKS.md
.claude/: settings.json
.claude/agents/: art-director.md  reviewer.md  rl-engineer.md  rules-engineer.md
.claude/skills/add-rule/: SKILL.md
.claude/skills/calibrate-prob/: SKILL.md
.claude/skills/gen-art/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/prompts/: art_pack.yaml
config/: rules.calibrated.json  rules.default.json
config/tables/: aa_attack_level.json  aa_result.json  attack_level_infantry_vs_vehicle.json  attack_level_vs_personnel.json  attack_level_vs_vehicle.json  height_diff_correction.json  indirect_correction.json  indirect_result.json  indirect_scatter.json  minefield.json  observation_distance.json  personnel_loss_correction.json  result_vs_personnel.json  result_vs_vehicle.json  terrain_movement.json  timings.json  unit_speed.json  vehicle_loss_correction.json
crates/openstratcore-core/: Cargo.toml
crates/openstratcore-py/: Cargo.toml
crates/openstratcore-py/src/: lib.rs
crates/openstratcore-wasm/: Cargo.toml
crates/openstratcore-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  CI.md  RESOURCES.md  RL.md  ROADMAP.md  WORKFLOWS.md
docs/rules/: README.md  combat-model.md  coverage.md
prompts/: commander_system.md
prompts/examples/: observation_example.json  tool_call_example.json
python/: pyproject.toml
python/examples/: llm_agent.py  selfplay_ppo.py
python/openstratcore_env/: __init__.py  mock_backend.py  parallel_env.py
python/prob_learning/: calibrate.py
scenarios/: air_assault.scenario.json  combined_arms.scenario.json  demo_skirmish.scenario.json  ridge_assault.scenario.json  rl_clash.scenario.json  rl_duel.scenario.json
scenarios/maps/: air_assault.map.json  combined_arms.map.json  demo_valley.map.json  ridge_assault.map.json
schemas/: llm_tools.schema.json  map.schema.json  replay.schema.json  rules.schema.json  scenario.schema.json  telemetry.schema.json
tools/: balance_report.py  bg_remove.py  codex_gen.sh  codex_review.sh  gen_art.py  integration_battle.py  post_rust.sh  resource_smoke.py  sim_smoke.py  tmx_import.py  validate.py  web-smoke.ps1
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: SettingsView.tsx  llm.ts  main.tsx  settings.ts  styles.css
web/tests/: play.smoke.mjs
(+27 files in other folders)
