[package]
name = "openstratcore-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openstratcore_core"
crate-type = ["cdylib"]

[dependencies]
openstratcore-core = { path = "../openstratcore-core" }
serde_json.workspace = true
pyo3 = { version = "0.22", features = ["extension-module"] }
