[package]
name = "openstratcore-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openstratcore-core = { path = "../openstratcore-core" }
serde_json.workspace = true
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
